# panopto-session-data

./: archived_hours.ipynb  insert.py  mise.toml  notes.ipynb  pyproject.toml  readme.md  sessions.sql
