[project]
name = "panopto-session-data"
version = "0.1.0"
description = "Analyze Panopto CSV reports with Pandas"
authors = [{"name" = "Eric Phetteplace", "email" = "phette23@gmail.com"}]
license = "ECL-2.0"
# numpy doesn't build on 3.11 yet
requires-python = ">=3.10,<3.11"
dependencies = [
    "csvkit>=1.0.7",
    "pandas>=1.4.2",
]
readme = "README.md"

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "black>=22.3.0",
]
